# chain

./: CMakeLists.txt  README  README.md
kinect/config/: modules.xml
kinect/lib/: README  install_name.py  libOpenNI.dylib  libXnCore.dylib  libXnDDK.dylib  libXnDeviceFile.dylib  libXnDeviceSensorV2KM.dylib  libXnFormats.dylib  libXnVCNITE_1_4_1.dylib  libXnVHandGenerator_1_4_1.dylib  libXnVNite_1_4_1.dylib  libnimCodecs.dylib  libnimMockNodes.dylib  libnimRecorder.dylib  libusb-1.0.0.dylib
kinect/lib/ni_hack/: README  XnLicensing.cpp  XnModuleLoader.cpp
src/: CMakeLists.txt  array.h  debug.h  dims.h  driver.cpp  driver.h  func.h  game.cpp  game.h  icon.icns  kinect.cpp  kinect.h  main.cpp  motion.cpp  motion.h  physics.cpp  physics.h  render.cpp  stdmath.cpp  stdmath.h  user.cpp  user.h  vec.h
